# SysOps

Lab5/: .gitignore  CMakeLists.txt  lab5.c  lab5_v2.c
